Fixed image centering on smaller viewport.

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -41,6 +41,7 @@ header {
 		@media (max-width: @screen-xs-max) {
 			display: block;
 			text-align: center;
+			padding-right: 0;
 		}
 	}
 
